<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="ButtonStyle"
    tools:context="com.osamufujimoto.glasscontrol.MainActivity">

    <ImageView
        android:id="@+id/screenshot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.68"
        android:gravity="center"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"/>

    <TableLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:stretchColumns="*"
        android:columnCount="2"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <TableRow>

            <Button
                android:id="@+id/btnSwipeLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSwipeLeftBtn"
                android:text="@string/swipe_left"/>

            <Button
                android:id="@+id/btnSwipeRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSwipeRightBtn"
                android:text="@string/swipe_right"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnTap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onTapBtn"
                android:text="@string/tap"/>

            <Button
                android:id="@+id/btnSwipeDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSwipeDownBtn"
                android:text="@string/swipe_down"/>
        </TableRow>

        <TableRow
            android:layout_weight="1">

            <Button
                android:id="@+id/btnStartScreencast"
                android:layout_width="0dp"
                android:layout_margin="5dp"
                android:layout_span="2"
                android:onClick="onScreenBtn"
                android:text="@string/start_screencast"/>
        </TableRow>

        <TableRow
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_margin="5dp"
                android:layout_span="2"
                android:onClick="onChooseGlassClicked"
                android:text="@string/choose_glass"/>
        </TableRow>

        <TableRow
            android:layout_weight="1">

            <TextView
                android:id="@+id/glass_status"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_span="2"
                android:gravity="center"
                tools:text="@string/connection_status"/> "/>

        </TableRow>

    </TableLayout>


</android.support.v7.widget.LinearLayoutCompat>
